# sparcv8emulator

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  run_until.sh
.github/workflows/: build.yml  ci.yml  test.yml
buildroot/: SETUP.md  local.mk
buildroot/br2-external/: external.desc
buildroot/br2-external/board/my-board/: busybox.config  device_table.txt  kernel.config  post-build.sh  user_table.txt
buildroot/br2-external/board/my-board/overlay/etc/: asound.conf
buildroot/br2-external/board/my-board/overlay/etc/profile.d/: audio.sh  keymap.sh
buildroot/br2-external/board/my-board/overlay/home/bob/: .profile
buildroot/br2-external/board/my-board/overlay/usr/games/: boom.cfg
buildroot/br2-external/configs/: my-board_defconfig
buildroot/patches/linux/: 0061-sparc32-leon-grpci2-guard-against-possible-null-pointer-dev-of_node.patch  0063-fix-replace-spin_lock_irqsave-with-a-trylock.patch  0064-Bugfix-use-ARRAY_SIZE-instead-of-sizeof-to-avoid-rea.patch
buildroot/patches/prboom/: 0003-fix-s16le-byteorder-on-big-endian.patch  prboom.mk
src/: CMakeLists.txt  LoopTimer.h  common.h  console_test.cpp  cv_log.hpp  debug.cpp  debug.h  dis.cpp  dis.h  main.cpp  memaccessprofiler.hpp  mutexprofiler.hpp  pause_sigaction.c  readelf.cpp  readelf.h  sparcv8_leon.cpp  sparcv8_leon_smp.cpp  sparcv8_runelf.cpp  timer_test.cpp
src/gdb/: CMakeLists.txt  DebugStopController.hpp  gdb_helper.h  gdb_server.cpp  gdb_server.h  gdb_stub.cpp  gdb_stub.hpp
src/peripherals/: APBCTRL.h  APBMST.h  APBPS2.h  APBUART.h  Amba.cpp  Amba.h  BusClock.cpp  BusClock.h  BusClock.hpp  CMakeLists.txt  Display.cpp  Display.h  GPTIMER.h  GRPCI2.cpp  GRPCI2.hpp  IRQMP.cpp  IRQMP.h  MCTRL.cpp  MCTRL.h  Peripherals.h  SVGA.h  Tickable.hpp  ac97.cpp  ac97.hpp  amba_pnp_dump.hpp  apb_slave.h  console.h  pcidevice.hpp
src/peripherals/gaisler/: ambapp.h  ambapp_ids.h  ambapp_names.h  common.h  config.h  config_auto.h  prom_no.h  startup_ambapp_names.c
src/sparcv8/: CMakeLists.txt  CPU.cpp  CPU.h  CPU_defines.h  CPU_functions.cpp  CPU_functionsExt.cpp  CPU_functions_Leon3Extensions.cpp  CPU_instr_map.h  CPU_instructions.cpp  CPU_instructions_Leon3_extensions.cpp  CPU_instructions_extensions.cpp  FPU.cpp  FPU_instructions.cpp  MMU.cpp  MMU.h
test/: CMakeLists.txt  testAC97.cpp  testAC97_NAM.cpp  testAMBA.cpp  testAPBBUS.cpp  testAPBCTRL.cpp  testAPBPS2.cpp  testAPBUART.cpp  testCPUEmu.cpp  testCPUInstructions.cpp  testCPUMem.cpp  testCPUTraps.cpp  testDisplay.cpp  testFPU.cpp  testGDBStub.cpp  testGPTIMER.cpp  testGRPCI2.cpp  testIRQMP.cpp  testInstructionSuite.cpp  testInstructionSuiteFPU.cpp  testLDSTFSR.cpp  testLEON3.cpp  testMCtrl.cpp  testMMU.cpp  testSVGACTRL.cpp  tests_main.cpp
test/asm/: a.out  add.aout  add.map  and.aout  and.map  bicc.aout  bicc.map  call.aout  call.map  casa.aout  casa.s  compile  compile_c  div.aout  div.map  endian.aout  endian.s  fbfcc.aout  fbfcc.map  fbfcc.s  fld.aout  fld.map  fld.s  fop.aout  fop.c  fop.map  fop1.aout  fop1.s  fop_fcc.aout  fop_fcc.c  fop_fcc.map  fopd.aout  fopd.c  jmpl.aout  jmpl.map  ld.aout  ld.map  ldf.aout  ldstub.aout  ldstub.map  (+45 more)
